--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 <div class="invitation">
     <header>
-        <h1>Hurmatli mehmon!</h1>
-        <p>2024-yil 4-5-oktyabr kunlari bo‘lib o‘tadigan "Nihoyat va baxt" to‘yi munosabati bilan aziz mehmonimiz bo‘lishni so‘raymiz.</p>
+        <h1>Hurmatli mehmonimiz!</h1>
+        <p>2024-yil 4-5-oktyabr kunlari bo‘lib o‘tadigan "Nikohat va baxt" to‘yi munosabati bilan aziz mehmonimiz bo‘lishni so‘raymiz.</p>
         <p>Qalblar ezguliklarga to‘la bo‘lgan ushbu qutlug‘ kunda do‘stlar yonida bo‘ling!</p>
     </header>
     <section class="details">
