--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="invitation">
     <header>
         <h1>Hurmatli mehmonimiz!</h1>
-        <p>2024-yil 4-5-oktyabr kunlari bo‘lib o‘tadigan "Nikoh va baxt" to‘yi munosabati bilan aziz mehmonimiz bo‘lishni so‘raymiz.</p>
+        <p>2024 yil 4-5 oktyabr kunlari bo‘lib o‘tadigan "Nikoh va baxt" to‘yimiz munosabati bilan aziz mehmonimiz bo‘lishingizni so‘raymiz.</p>
         <p>Qalblar ezguliklarga to‘la bo‘lgan ushbu qutlug‘ kunda do‘stlar yonida bo‘ling!</p>
     </header>
     <section class="details">
